config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -73,7 +73,7 @@
             },
             {
                 "label": "lorem-ipsum",
-                "url": "#",
+                "url": "reach.liminchong@gmail.com",
                 "style": "link",
                 "icon": "dribbble",
                 "new_window": false,
