config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -72,7 +72,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Let's talk!",
                 "url": "reach.liminchong@gmail.com",
                 "style": "link",
                 "icon": "dribbble",
