config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         ]
     },
     "footer": {
-        "content": "&copy; Li Min Chong. All rights reserved.",
+        "content": "&copy; 2021 Li Min Chong. All rights reserved.",
         "has_social": true,
         "social_links": [
             {
