config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -65,7 +65,7 @@
                 "new_window": true
             },
             {
-                "label": "Let's talk! Email ",
+                "label": "Let's talk! Email me at ",
                 "url": "reach.liminchong@gmail.com",
                 "style": "link",
                 "icon": "dribbble",
