config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -65,7 +65,7 @@
                 "new_window": true
             },
             {
-                "label": "Let's talk! Email<a href=\"mailto:reach.liminchong@gmail.com\">Let's work together!</a>",
+                "label": "Let's ta<a href=\"mailto:reach.liminchong@gmail.com\">Let's work together!</a>",
                 "url": "reach.liminchong@gmail.com",
                 "style": "link",
                 "icon": "dribbble",
