config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         ]
     },
     "footer": {
-        "content": "© 2021 Li Min Chong.",
+        "content": "© 2021 Li Min Chong",
         "has_social": true,
         "social_links": [
             {
