--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Stackbit Exto Theme",
     "path_prefix": "/",
     "color_scheme": "light",
-    "accent_color": "green",
+    "accent_color": "blue",
     "header": {
         "title": "Exto",
         "has_nav": true,
