config.json: updated accent_color

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Stackbit Exto Theme",
     "path_prefix": "/",
     "color_scheme": "light",
-    "accent_color": "violet",
+    "accent_color": "yellow",
     "header": {
         "title": "Exto",
         "has_nav": true,
