config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
                 "style": "link"
             },
             {
-                "label": "Portfolio",
+                "label": "Works",
                 "url": "/portfolio/",
                 "style": "link"
             },
