--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Li",
+    "title": "Limin UX",
     "path_prefix": "/",
     "color_scheme": "light",
     "accent_color": "green",
