config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Limin UIUX",
+    "title": "Limin Chong",
     "path_prefix": "/",
     "color_scheme": "light",
     "accent_color": "green",
