--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "color_scheme": "light",
     "accent_color": "green",
     "header": {
-        "title": "LMUX",
+        "title": "LiMin",
         "has_nav": true,
         "nav_links": [
             {
