config.json: updated accent_color

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Limin Chong",
     "path_prefix": "/",
     "color_scheme": "dark",
-    "accent_color": "green",
+    "accent_color": "pink",
     "header": {
         "title": "LiMin",
         "has_nav": true,
