config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,7 +54,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "https://www.linkedin.com/liminchong",
+                "url": "https://www.linkedin.com/in/liminchong",
                 "style": "icon",
                 "icon": "linkedin",
                 "new_window": true
